Dinamic Properties files and Maven Profiles in order to be able to change properties values based on build environment

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,51 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <profiles>
+
+        <profile>
+            <id>dev</id>
+            <activation>
+                <!-- this profile is active by default -->
+                <activeByDefault>true</activeByDefault>
+                <!-- activate if system properties 'env=dev' -->
+                <property>
+                    <name>env</name>
+                    <value>dev</value>
+                </property>
+            </activation>
+            <properties>
+                <conf.name>Federico DevEnv</conf.name>
+                <conf.surname>Monaco DevEnv</conf.surname>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>prod</id>
+            <activation>
+                <!-- activate if system properties 'env=prod' -->
+                <property>
+                    <name>env</name>
+                    <value>prod</value>
+                </property>
+            </activation>
+            <properties>
+                <conf.name>Federico ProdEnv</conf.name>
+                <conf.surname>Monaco ProdEnv</conf.surname>
+            </properties>
+        </profile>
+
+    </profiles>
+
+    <build>
+
+        <!-- map ${} variable -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
 </project>
